_sass/base/_global.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
figure {
  margin: 0;
}
// For correct line number width in Github Gists
.gist table tbody tr td {
  box-sizing: content-box;
}
html {
  background: $background-color;
}

// Typography
::selection {
  background: $selection-color;
}
::-moz-selection {
  background: $selection-color;
}
body {
  color: $text-color;
  font-family: $font-family-main;
  font-size: $font-size;
  word-wrap: break-word;
}
h1, h2, h3, h4, h5, h6 {
  font-family: $font-family-headings;
  line-height: 1.2;
  margin: 0.67em 0;
  a {
    color: $text-color;
  }
}
h1 {
  font-size: 2.5em;
}
h2 {
  font-size: 2em;
}
h3 {
  font-size: 1.5em;
}
h4 {
  font-size: 1.15em;
}
blockquote {
    border-left: 2px solid;
    padding: 1em 1em;
}
blockquote p:last-child,
footer p:last-child {
  text-align:center;
  margin-bottom: 0;
}
table {
  table-layout:fixed;
  width:100%;
  word-wrap:break-word;
}
td,
th {
  padding: 0.5em 1em;
  border: 1px solid $border-color;
  text-align: left;
}
td {
  vertical-align: top;
}
th {
  vertical-align: bottom;
}
table,
dl,
blockquote,
code,
kbd,
pre,
samp {
  margin: 1em 0;
}
dt {
  font-weight: bold;
}
dd {
    margin-left: 2em;
}
p, ol, ul, dl, .math-display {
  line-height: 1.5;
  text-align:justify;
  text-justify: inter-character;
  margin-bottom: 1em;
}
// KaTeX math display
.math-display {
  display: inline-block;
  width: 100%;
}
// Lists within lists
li > ul, li > ol {
    margin-bottom: 0;
    margin-left: 1em;
}
ol, ul {
  list-style-position: inside;
}
hr {
  border: 0;
  border-top: 1px solid $border-color;
  border-bottom: 1px solid #fff;
  margin: 1em 0;
}
a {
  color: $link-color;
  text-decoration: none;
}
.nav {
  list-style: none;
  margin: 0;
  padding: 0;
}
// Responsive media
iframe, img, embed, object, video {
  max-width: 100%;
}
img[align=left] {
  margin-right: 3%;
}
img[align=right] {
  margin-left: 3%;
}

/* Navbar container */
.navbar {
  overflow: hidden;
  background-color: #111;
  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
}

/* Links inside the navbar */
.navbar a {
  float: left;
  font-size: 16px;
  font-weight: bold;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* The dropdown container */
.dropdown {
  float: left;
  overflow: hidden;
}

/* Dropdown button */
.dropdown .dropbtn {
  font-size: 16px;
  font-weight: bold;
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit; /* Important for vertical align on mobile phones */
  margin: 0; /* Important for vertical align on mobile phones */
}

/* Add a red background color to navbar links on hover */
.navbar a:hover, .dropdown:hover .dropbtn {
  background-color: #00AAAA;
}

/* Dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  float: none;
  color: black;
  font-weight: normal;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

/* Add a grey background color to dropdown links on hover */
.dropdown-content a:hover {
  background-color: #ddd;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}

